# sdkdemo

./: CMakeLists.txt  FindGelSightSdk.cmake  README.md  copysdk.bat  sdkdemo.sln
demo/: CMakeLists.txt  demo.cpp  demo.vcxproj
fingerdemo/: CMakeLists.txt  fingerdemo.cpp
propertysheets/: debug.props  gelsightsdk.props  release.props
testdata/: demo-calibration.yaml  model-dome.yaml
testdata/BGA-001/: bgatarget.yaml  scan-edge.yaml  scan-orig.yaml
testdata/BGA-002/: scan-edge.yaml  scan-orig.yaml
testdata/BGA-003/: bgatarget.yaml  scan-edge.yaml  scan-orig.yaml  scan.yaml
testdata/BGA-004/: bgatarget.yaml  scan-edge.yaml  scan-orig.yaml
testdata/FingerData/: finger-model.yaml
testdata/FingerData/coin/: scan.yaml
testdata/FingerData/scan001/: scan.yaml
testdata/FingerData/scan002/: scan.yaml
testdata/FingerData/scan003/: scan.yaml
testdata/Flat-001/: scan-edge.yaml  scan-orig.yaml  scan.yaml
testdata/HandheldData/: model-test1.yaml
testdata/HandheldData/japanese-coin-001/: scan.yaml
testdata/OEMData/: demo-calibration.yaml
testdata/OEMData/BGA-001/: scan.yaml
testdata/OEMData/BGA-002/: bgatarget.yaml  scan.yaml
testdata/OEMData/BGA-004/: scan.yaml
testdata/R513-500/: scan-edge.yaml  scan-orig.yaml  scan.yaml
